--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "components/link-idf"]
-	path = components/link-idf
-	url = https://github.com/mathiasbredholt/link-idf.git
+[submodule "components/link-esp"]
+	path = components/link-esp
+	url = https://github.com/mathiasbredholt/link-esp.git
