--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,1 +1,2 @@
-idf_component_register(SRCS main.cpp)
+idf_component_register(SRCS main.cpp REQUIRES link-esp nvs_flash
+                       protocol_examples_common)
